// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLike /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 80em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconLike /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 80em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconLike /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconLike /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 80em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconLike /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconLike /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 80em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconLike /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M184 72h48v113h-48V72zM24.7 91.2c3.7 20.4 29.6 76.1 29.6 76.1 4.9 11.1 8 17.8 17.8 17.8h74c11.6 0 21-9.4 21-21V93c0-11.6-9.4-21-21-21-1 0-2-.5-2.6-1.3-20.5-27.4-24.1-41.1-30-56-1.9-4.9-6-13.8-14.8-13.8-10.9.1-24.8 13.1-25.2 28-.4 15.3 1.8 24.4 11.4 42.8 0 .1.1.1.1.2H42.9c-9.9.1-20 9.6-18.2 19.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
